fix nav overflow issue when there are too many nav items

--- a/template/assets/style.css
+++ b/template/assets/style.css
@@ -43,6 +43,9 @@ nav > .nav-list {
     height: 100%;
     width: 1140px;
     margin: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
 }
 
 nav > .nav-list > a {
@@ -323,6 +326,7 @@ article hr {
 /* responsive */
 
 @media screen and (max-width: 1140px) {
+    nav > .nav-list,
     .content {
         width: 900px;
     }
@@ -337,6 +341,7 @@ article hr {
 }
 
 @media screen and (max-width: 940px) {
+    nav > .nav-list,
     .content,
     aside {
         width: 100%;
@@ -368,6 +373,7 @@ article hr {
 }
 
 @media screen and (max-width: 630px) {
+    nav > .nav-list,
     .main,
     aside,
     .header > .motto {
